@@ -2,20 +2,24 @@ package com.oriol.app.data.gateways;
 
 import com.oriol.app.data.entities.ProductEntity;
 import com.oriol.app.data.repositories.ProductRepository;
+import com.oriol.app.domain.MsPagination;
 import com.oriol.app.domain.products.Product;
 import com.oriol.app.domain.products.ProductGateway;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.UUID;
 
+import static java.util.stream.Collectors.toList;
+
 @Component
 public class DefaultProductGateway implements ProductGateway {
-
     private final ProductRepository productRepository;
     public DefaultProductGateway(ProductRepository productRepository) {
         this.productRepository = productRepository;
     }
-
+    private int PAGE_SIZE = 1;
     @Override
     public Product create(Product product) {
         product.setId(UUID.randomUUID().toString());
@@ -36,7 +40,24 @@ public class DefaultProductGateway implements ProductGateway {
 
     @Override
     public List<Product> getProducts() {
-        return productRepository.findAll().stream().map(this::toModel).toList();
+        return null; //productRepository.findAll().stream().map(this::toModel).toList();
+    }
+
+    /**
+     * @param page
+     * @return
+     */
+    @Override
+    public MsPagination<Product> getProducts(int page) {
+        Page<ProductEntity> productEntityPagination = productRepository.findAll(PageRequest.of(page, PAGE_SIZE));
+        System.out.println(productEntityPagination);
+        List<Product> products = productEntityPagination.getContent().stream().map(this::toModel).collect(toList());
+        System.out.println(products);
+        return new MsPagination.PaginationPageBuilder<Product>("products")
+                .body(products)
+                .pageNumber(page)
+                .totalPages(productEntityPagination.getTotalPages())
+                .build();
     }
 
     @Override
